[package]
name = "ssl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
foreign-types = "0.5.0"

ssl-sys = { path = "./ssl-sys" }
strum = { version = "0.26.2", features = ["derive"] }
