[package]
name = "ssl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
thiserror = "1.0.58"
foreign-types = "0.5.0"
chrono = "0.4.38"
strum = { version = "0.26.2", features = ["derive"] }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"

ssl-sys = { path = "./ssl-sys" }
