[package]
name = "ssl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.158"
thiserror = "1.0.63"
foreign-types = "0.5.0"
chrono = "0.4.38"
strum = { version = "0.26.3", features = ["derive"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
signature = { version = "2.2.0", features = ["std"] }

ssl-sys = { path = "../ssl-sys" }

[dev-dependencies]
hex-literal = "0.4.1"
