[package]
name = "ssl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.158"
thiserror = "2.0.1"
foreign-types = "0.5.0"
chrono = "0.4.38"
strum = { version = "0.26.3", features = ["derive"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
signature = { version = "2.3.0-pre.4", features = ["std"] }
async-signature = { version = "0.6.0-pre.4", features = ["digest"] }
cipher = "0.4.4"
digest = { version = "0.11.0-pre.9", features = ["std"] }
generic-array = "1.1.0"
typenum = "1.17.0"
block-buffer = "0.11.0-rc.2"
hybrid-array = "0.2.0-rc.11"

ssl-sys = { path = "../ssl-sys" }

[dev-dependencies]
hex-literal = "0.4.1"
